--- a/_config.yml
+++ b/_config.yml
@@ -197,6 +197,10 @@ exclude:
   - readme_preview/
   - vendor
   - _pages/teaching.md
+  - _pages/profiles.md
+  - _pages/dropdown.md
+  - _pages/repositories.md
+  
 keep_files:
   - CNAME
   - .nojekyll
