--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -20,7 +20,7 @@ github_username: microbiosaroj # your GitHub user name
 # hal_id: # your HAL id (https://hal.science/)
 # ieee_id: # your ieeexplore.ieee.org/author/id
 # inspirehep_id: 1010907 # Inspire HEP author ID
-instagram_id: microbiosaroj # your instagram id
+# instagram_id: microbiosaroj # your instagram id
 # kaggle_id: # your kaggle id
 # keybase_username: # your keybase user name
 # lastfm_id: # your lastfm id
