--- a/_config.yml
+++ b/_config.yml
@@ -200,6 +200,8 @@ exclude:
   - _pages/profiles.md
   - _pages/dropdown.md
   - _pages/repositories.md
+  - _news/announcement_2.md
+  - _news/announcement_3.md
   
 keep_files:
   - CNAME
